tenative schedule + tooltips + some more content

--- a/courses.html
+++ b/courses.html
@@ -91,11 +91,11 @@
                     </div>
                     
                     <div class="col d-flex align-items-start">
-                        <i class="bi-calendar-date fs-3 mx-3"></i>
+                        <i class="bi-people fs-3 mx-3"></i>
                         <div>
-                            <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Schedule</h3>
+                            <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Environment</h3>
                             <p>
-                                Courses are one or two weeks long, with classes every weekday. Students will have access to materials in case they miss class.
+                                Students will have many opportunities to engage and ask questions. We guarantee at least a 3:1 student to teacher ratio, fostering a close community.
                             </p>
                         </div>
                     </div>
@@ -199,19 +199,14 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">June 24-28</th>
-                                                        <td class="py-2">6:00-7:45 PM</td>
-                                                        <td class="py-2">$75</td>
+                                                        <th class="py-2" scope="row">July 15-July 26 <br>Weekdays</th>
+                                                        <td class="py-2">4:00-5:30 PM EST</td>
+                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
                                                     </tr>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">content</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">Primary</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
+                                                        <th class="py-2" scope="row">July 29-August 5 <br>Weekdays</th>
+                                                        <td class="py-2">4:00-5:30 PM EST</td>
+                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -290,6 +285,8 @@
                                         </div>
                                     </div>
 
+
+                                    
                                     <div class="col-5" style="min-width: 25em;">
                                         <div id="intro-python-schedule" class="bs-component">
                                             <table class="table table-striped table-bordered">
@@ -302,19 +299,14 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">June 24-28</th>
-                                                        <td class="py-2">6:00-7:45 PM</td>
-                                                        <td class="py-2">$75</td>
+                                                        <th class="py-2" scope="row">July 15-July 26 <br>Weekdays</th>
+                                                        <td class="py-2">6:00-7:30 PM EST</td>
+                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
                                                     </tr>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">content</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">Primary</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
+                                                        <th class="py-2" scope="row">July 29-August 5 <br>Weekdays</th>
+                                                        <td class="py-2">6:00-7:30 PM EST</td>
+                                                        <td class="py-2">10 * 1.5 * 15 = $225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -350,19 +342,9 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">June 24-28</th>
+                                                        <th class="py-2" scope="row">July 16-August 17 <br>Tuedays & Saturdays <br>6:00-7:30 PM EST</th>
                                                         <td class="py-2">6:00-7:45 PM</td>
-                                                        <td class="py-2">$75</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">content</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">Primary</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -400,19 +382,9 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">June 24-28</th>
+                                                        <th class="py-2" scope="row">July 18-August 18 <br>Thursdays & Sundays <br>6:00-7:30 PM EST</th>
                                                         <td class="py-2">6:00-7:45 PM</td>
-                                                        <td class="py-2">$75</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">content</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
-                                                    </tr>
-                                                    <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">Primary</th>
-                                                        <td class="py-2">content</td>
-                                                        <td class="py-2">content</td>
+                                                        <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
