--- a/tutoring.html
+++ b/tutoring.html
@@ -206,27 +206,7 @@
                                         </thead>
                                         <tbody>
                                             <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Pre-Algebra</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Algebra</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Geometry</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Precalculus</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Trigonometry</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">AP Calculus AB/BC</th>
+                                                <th class="py-2" scope="row">Pre-Algebra - AP Calculus AB/BC</th>
                                                 <td class="py-2">all tutors</td>
                                             </tr>
                                             <tr class="table-secondary">
@@ -243,7 +223,7 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Competitive Math (AMC8/10/12 level)</th>
-                                                <td class="py-2">Max</td>
+                                                <td class="py-2">Max <span class="help-tip" data-help-tip="[insert qualification]">?</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -266,11 +246,7 @@
                                         </thead>
                                         <tbody>
                                             <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Intro to Python</th>
-                                                <td class="py-2">all tutors</td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">Intro to Java</th>
+                                                <th class="py-2" scope="row">Intro to Python / Java / C++</th>
                                                 <td class="py-2">all tutors</td>
                                             </tr>
                                             <tr class="table-secondary">
@@ -287,7 +263,7 @@
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Competitive Programming (USACO Bronze-Gold)</th>
-                                                <td class="py-2">all tutors</td>
+                                                <td class="py-2">all tutors <span class="help-tip" data-help-tip="Tutors are USACO Gold to Platinum level">?</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -311,15 +287,15 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Chemistry</th>
-                                                <td class="py-2">Max</td>
+                                                <td class="py-2">Max <span class="help-tip" data-help-tip="Tutor scored 5 on the AP exam">?</span></td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C Mechanics</th>
-                                                <td class="py-2">Daniel, Max</td>
+                                                <td class="py-2">Daniel, Max, Johnny <span class="help-tip" data-help-tip="Tutors scored 5 on the AP exam">?</span></td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP Physics C E&M</th>
-                                                <td class="py-2">Daniel, Max</td>
+                                                <td class="py-2">Daniel, Max, Johnny <span class="help-tip" data-help-tip="Tutors scored 5 on the AP exam">?</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -375,23 +351,15 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP US History</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Johnny</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">AP US Government</th>
-                                                <td class="py-2"></td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">AP Language and Composition</th>
-                                                <td class="py-2"></td>
-                                            </tr>
-                                            <tr class="table-secondary">
-                                                <th class="py-2" scope="row">AP Literature and Composition</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Johnny</td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">General Writing</th>
-                                                <td class="py-2"></td>
+                                                <td class="py-2">Johnny <span class="help-tip" data-help-tip="Tutor is a TJHSST Writing Center Tutor">?</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -415,11 +383,11 @@
                                         <tbody>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">SAT / PSAT</th>
-                                                <td class="py-2">all tutors</td>
+                                                <td class="py-2">Johnny, Max <span class="help-tip" data-help-tip="Tutors scored 1580 on the SAT">?</span></td>
                                             </tr>
                                             <tr class="table-secondary">
                                                 <th class="py-2" scope="row">Cambridge TMUA / STEP</th>
-                                                <td class="py-2">Max</td>
+                                                <td class="py-2">Max <span class="help-tip" data-help-tip="Tutor was accepted by Cambridge University">?</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
