--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
             <div class="container">
                 <p>
                     <b><u>Organization contacts:</u></b><br>
-                    <b>Email:</b> daniel@daniel.daniel<br>
-                    <b>Phone:</b> (daniel)daniel-daniel<br>
-                    <b>Hours:</b> daniel - daniel
+                    <b>Email:</b> tuturing@tuturing.net <br>
+                    <b>Phone:</b> (571) 201-1499 (johnny: i never check my phone tho, if someone else wnats to replace) <br>
+                    <b>Hours:</b> 10AM - 7PM EST
                 </p>
 
                 <p>
