--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <p>
                     <b><u>Organization contacts:</u></b><br>
                     <b>Email:</b> tuturing@tuturing.net <br>
-                    <b>Phone:</b> (571) 201-1499 (johnny: i never check my phone tho, if someone else wnats to replace) <br>
+                    <b>Phone:</b> (571) 201-1499 <br>
                     <b>Hours:</b> 10AM - 7PM EST
                 </p>
 
