--- a/courses.html
+++ b/courses.html
@@ -105,7 +105,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Pricing</h3>
                             <p>
-                                We try to price at an extremely affordable rate. If you require financial aid, please let us know and we can discuss.
+                                $15 / hour, for any class, no catches. We try to price at an extremely affordable rate. If you require financial aid, please let us know and we can discuss.
                             </p>
                         </div>
                     </div>                    
@@ -182,7 +182,11 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
-                                                content
+                                                This class will give students the robust algebra background necessary for mathematics at a high school level and beyond, as well as competitive math.
+                                                
+                                                Course material covers the standard middle school Algebra curriculum and useful tips and tricks used in the AMC.  
+                                                <br><br>
+                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
                                         </div>
                                     </div>
@@ -278,7 +282,7 @@
                                                 <br><br>
                                                 This class is hands-on; students will learn concepts and then directly practice them by writing Python to solve algorithmic problems. To foster a nuanced understanding of the Python syntax, there will be friendly competition. For example, students who solve certain problems with the shortest code will earn recognition, which encourages experimentation of different techniques.
                                                 <br><br>
-                                                Tenative Class Schedule:
+                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
 
 
                                             </p>
@@ -319,13 +323,15 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
+                                                PREREQS:
+                                                <br><br>
                                                 The ability to work with sophiscated algorithims and data structures is essential to competitive programming and valued in the workforce.
                                                 <br><br>
                                                 As leaders in the TJHSST Computer Team, our instructors have had extensive experience explaining these algorithms and how to apply them intuitively. 
                                                 <br><br>
                                                 Students should have prior programming experience. They will acquire the necessary skills to pass the USACO Bronze and Silver level, and be overprepared for the AP Computer Science A course.
                                                 <br><br>
-                                                Tenative Class Schedule:
+                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                             </p>
                                         </div>
                                     </div>
@@ -342,8 +348,8 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 16-August 17 <br>Tuedays & Saturdays <br>6:00-7:30 PM EST</th>
-                                                        <td class="py-2">6:00-7:45 PM</td>
+                                                        <th class="py-2" scope="row">July 16-August 17 <br>Tuedays & Saturdays</th>
+                                                        <td class="py-2">6:00-7:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
@@ -357,12 +363,14 @@
                                     <div class="col">
                                         <div class="container">
                                             <p>
+                                                PREREQS:
+                                                <br><br>
                                                 Artificial Intelligence (AI) is the buzzword of the century. What actually constitutes AI? In this course, we’ll survey the origins of AI all the way to today’s neural networks.
                                                 <br><br>
                                                 This class is a synthesis of the world-class TJHSST AI curriculum and our vast experience competiting in adversarial AI competitions such as MIT Battlecode and Correlation-One's Terminal.
 
                                                 <br><br>
-                                                Tenative Class Schedule:
+                                                <a class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
                                                 <br><br>
                                                 Note that there is a lot to AI. It is not possible to cover it all nor give the most robust understanding in a course of this scope. That being said, this course will give students the requisite ways to think about AI vs. traditional algorithms, construct these algorithms themselves. Most AI courses give a high-level understanding of the content, using libraries that solve the problem for you. We believe it’s important to start from the foundation. 
 
@@ -382,8 +390,8 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr class="table-secondary">
-                                                        <th class="py-2" scope="row">July 18-August 18 <br>Thursdays & Sundays <br>6:00-7:30 PM EST</th>
-                                                        <td class="py-2">6:00-7:45 PM</td>
+                                                        <th class="py-2" scope="row">July 18-August 18 <br>Thursdays & Sundays</th>
+                                                        <td class="py-2">6:00-7:30 PM EST</td>
                                                         <td class="py-2">$225</td>
                                                     </tr>
                                                 </tbody>
