--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <span class="badge text-bg-success">Beginner</span>
                                 </p>
                                 <p class="card-text">
-                                    Introduction to coding with the Python languagel; teaching basic concepts such as variables, lists, and loops. 
+                                    Introduction to coding with the Python language; teaching basic concepts such as variables, lists, and loops. 
                                     <br><br>
                                     Prepares students for computer science at the level of AP Computer Science.
                                 </p>
@@ -276,7 +276,7 @@
                     </a>
                 </h3>
                 <p>
-                    See our contat information on
+                    See our contact information on
                     <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">this page</a>.
                 </p>
             </div>
