--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    Munir
+                                    <strong>Munir</strong>
                                 </p>
                             </div>
                         </div>
@@ -103,12 +103,14 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250578758822527046/23183387.png?ex=666d6dfa&is=666c1c7a&hm=c30d51b749e2037d87e1fa4274a9e7954d2103d4088984fab8052c7fdb6f6166&=&format=webp&quality=lossless&width=346&height=346" alt="Card image">
+                                    <img class="card-img" src="./static/assets/johnny.jpg" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
                                 <p>
-                                    Johnny
+                                    <strong>Johnny</strong>
+                                    <br>
+                                    aksdlsakd;sa;dksa;dksa
                                 </p>
                             </div>
                         </div>
@@ -125,7 +127,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    Daniel
+                                    <strong>Daniel</strong>
                                 </p>
                             </div>
                         </div>
@@ -140,7 +142,7 @@
                             </div>
                             <div class="col">
                                 <p>
-                                    Max
+                                    <strong>Max</strong>
                                 </p>
                             </div>
                         </div>
