--- a/tutoring.html
+++ b/tutoring.html
@@ -87,8 +87,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption text-start">
-                                        <h1>Example headline.</h1>
-                                        <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Max is so orz</p>
                                     </div>
                                 </div>
                             </div>
@@ -97,9 +97,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption">
-                                        <h1>Another example headline.</h1>
-                                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Daniel is so orz</p>
                                     </div>
                                 </div>
                             </div>
@@ -108,9 +107,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption text-end">
-                                        <h1>One more for good measure.</h1>
-                                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Munir is so orz</p>
                                     </div>
                                 </div>
                             </div>
@@ -119,9 +117,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption text-end">
-                                        <h1>One more for good measure.</h1>
-                                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Daniel is so cute</p>
                                     </div>
                                 </div>
                             </div>
@@ -130,9 +127,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption">
-                                        <h1>Another example headline.</h1>
-                                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Munir is so orz</p>
                                     </div>
                                 </div>
                             </div>
@@ -141,9 +137,8 @@
                                 <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
                                 <div class="container">
                                     <div class="carousel-caption text-end">
-                                        <h1>One more for good measure.</h1>
-                                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                                        <h1>Testimonial</h1>
+                                        <p class="opacity-75">Max is so cute</p>
                                     </div>
                                 </div>
                             </div>
