minor tweaks to site- removed redudant register here badges, added bio/image, removed dark/light mode toggling, added pricing for tutoring

--- a/about.html
+++ b/about.html
@@ -39,9 +39,6 @@
                         <a href="./contact.html" class="nav-link text-dark">• contact</a>
                     </li>
 
-                    <li class="nav-item" onclick="document.querySelector('html').classList.toggle('dark'); manageTheme()">
-                        <i class="bi-moon nav-link"></i>
-                    </li>
                     
                     <li class="nav-item dropdown d-block d-md-none">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
@@ -122,12 +119,14 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="card mw-100">
-                                    <img class="card-img" src="https://media.discordapp.net/attachments/1219373250312929370/1250578758822527046/23183387.png?ex=666d6dfa&is=666c1c7a&hm=c30d51b749e2037d87e1fa4274a9e7954d2103d4088984fab8052c7fdb6f6166&=&format=webp&quality=lossless&width=346&height=346" alt="Card image">
+                                    <img class="card-img" src="./static/assets/daniel.png" alt="Card image">
                                 </div>
                             </div>
                             <div class="col">
                                 <p>
                                     <strong>Daniel</strong>
+                                    <br>
+                                    Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of the Computer Security Club. He has competed in many competitions including winning MIT battlecode, winning 2000$ from UMD's high school programming contest, among many more. He enjoys playing Tetris and Poker in his free time.
                                 </p>
                             </div>
                         </div>
