--- a/courses.html
+++ b/courses.html
@@ -39,9 +39,6 @@
                         <a href="./contact.html" class="nav-link text-dark">• contact</a>
                     </li>
 
-                    <li class="nav-item" onclick="document.querySelector('html').classList.toggle('dark'); manageTheme()">
-                        <i class="bi-moon nav-link"></i>
-                    </li>
                     
                     <li class="nav-item dropdown d-block d-md-none">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
@@ -71,10 +68,11 @@
             </div>
 
             <div id="info-section" class="container my-2" style="margin-top: 0.5rem;">
+
                 <div class="row">
                     <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> info</h4>
                     <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover" style="background-color:#58cb61">Register Here</span>
+                        <span class="badge badge-hover" style="background-color:#FF0000">Register Here</span>
                     </a>
                 </div>
                 
@@ -125,7 +123,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Online Classes</h3>
                             <p>
-                                Courses will be held online through Google Classroom and Google Meet. Private tutees may request to meet in-person.
+                                Courses will be held online through Google Classroom and Google Meet.
                             </p>
                         </div>
                     </div>
@@ -135,7 +133,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Office Hours</h3>
                             <p>
-                                Students and tutees are welcome to email instructors outside of lessons with questions or requests for explanation.
+                                Students are welcome to email instructors outside of lessons with questions or requests for explanation.
                             </p>
                         </div>
                     </div>
@@ -145,9 +143,6 @@
             <div id="math-section" class="container my-2">
                 <div class="row">
                     <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> math</h4>
-                    <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover" style="background-color:rgb(199, 88, 255)">Register Here</span>
-                    </a>
 
                     <div class="bs-component">
                         <ul class="nav nav-tabs" role="tablist">
@@ -231,9 +226,6 @@
             <div id="cs-section" class="container my-2">
                 <div class="row">
                     <h4 class="subhead-shadow my-0" style="max-width: fit-content;">>>> computer science</h4>
-                    <a class="my-auto px-0" href="#" style="max-width: fit-content;">
-                        <span class="badge badge-hover text-bg-info">Register Here</span>
-                    </a>
 
 
                     <div class="bs-component">
