--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                         <a href="./contact.html" class="nav-link text-dark">• contact</a>
                     </li>
 
-                    <li class="nav-item" onclick="document.querySelector('html').classList.toggle('dark'); manageTheme()">
-                        <i class="bi-moon nav-link"></i>
-                    </li>
                     
                     <li class="nav-item dropdown d-block d-md-none">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
@@ -242,7 +239,7 @@
                                                 <div class="accordion-body">
                                                     Aside from one on one lessons, we also have the option for small group lessons for a discount group price. 
                                                     <br><br>
-                                                    Once again, topics and more information can be found on the 
+                                                    Topics and more information can be found on the 
                                                     <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">tutoring</a> page.
                                                 </div>
                                             </div>
@@ -256,7 +253,7 @@
                                             </h2>
                                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#tutoring-accordion">
                                                 <div class="accordion-body">
-                                                    We are able to provide curricula for most topics, 
+                                                    We have curricula for all topics, 
                                                     but we are also able to teach off of materials that students provide (e.g. from a book or along with a class).
                                                 </div>
                                             </div>
